# ParkingSystem

./: .gitignore  ParkingSystem.sln
CarDetector/: pyproject.toml  pyvenv.cfg  requirements.txt
CarDetector/CarDetector/: __init__.py  __main__.py
CarDetector/CarDetector/config/: DetectorConfig.ini  __init__.py  configuration.py  const.py
CarDetector/CarDetector/core/: __init__.py  detector.py  detector_stats.py  scanner.py  wrapper.py
CarDetector/CarDetector/cv2_draw/: cv2short.py
CarDetector/CarDetector/formatters/: __init__.py
CarDetector/CarDetector/logger/: __init__.py  logger.py
CarDetector/src/CarDetector/: CarDetector.py  Configuration.py  Detector.py  DetectorConfig.ini  __main__.py
CarDetector/tests/: test_lp_format.py
ConfigurationFiles/: DetectorConfig.ini
Detector/: Detector.pyproj  DetectorConfig.ini  const.py  cv2short.py  detector.py  detector_state.py  help_dev.py  license_plate_formatter.py  lp_format.py  main.py  pyvenv.cfg  reader.py  requirements.txt
FileLogger/: FileLogger.csproj  Program.cs  ServiceCollectionExtension.cs  Startup.cs  appsettings.json
FileLogger.Tests/: FileLogger.Tests.csproj  MessageHandlerServiceTests.cs  RabbitMqServiceTests.cs  TestHelper.cs
GateHandler/: ActionReceiver.cs  Form1.Designer.cs  Form1.cs  GateHandlerMainWindow.Designer.cs  GateHandlerMainWindow.cs  GateHandlerUI.csproj  GatesHandler.cs  Program.cs
GateHandlerLibary/: ActionReceiver.cs  GateReceiver.cs  GatesHandler.cs
Logger.Tests/: Logger.Tests.csproj  MessageHandlerServiceTests.cs  RabbitMqServiceTests.cs  TestHelper.cs
(+50 files in other folders)
