[project]
name = "CarDetector"
version = "0.0.1"
authors = [{ name = "oldsinner", email = "antylifepatia@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
